#SB-0000 UI fix for topic picker overlap in edit form popup

--- a/src/app/client/src/assets/styles/pages/_dock.scss
+++ b/src/app/client/src/assets/styles/pages/_dock.scss
@@ -819,8 +819,13 @@ app-question-set-editor{
 }
 
 // styling for edit details topic select popup
+.sb-z-index99{
+  sui-modal-dimmer{
+    z-index: 999!important;
+  }
+}
 .dimmable.o-y-hide.dimmed{
-  .ui.dimmer.modals{
+  div.ui.dimmer.modals{
     z-index: 9999 !important
   }
 }
@@ -984,3 +989,4 @@ app-question-set-editor{
     }
   }
 }
+
